[package]
name = "SPO-WUK"
version = "0.1.0"
authors = [
    "Jan Decavele",
    "Thomas Decavele",
]
edition = "2018"

[[bin]]
name="SPO-WUK"

[dependencies]
piston = "1.0.0"
piston_window = "0.132.0"
piston2d-graphics = "0.45.0"
pistoncore-glutin_window = "0.72.0"
piston2d-opengl_graphics = "0.88.0"